@@ -9,6 +9,7 @@ Version 1.3.0+CVS (?? ??? 2011)
    I've also moved more punctuation and some "literal" phrases from the code into English-US.txt.
    Added includes/css/admin.css and moved the "#admin" styles out of styles.css.
      It makes the overall file size smaller and the CSS easier to work with.
+   Change js/edit_remotes.php to js/edit_remotes.js.
  - 27-Sep-11 Remove includes/js/assistant_edit.php.
    Replaced with includes/js/assistant_edit.js some time ago.
    Remove includes/js/catsel.php. Use a cookie for that variable.
